--- a/SmackApp/Base.lproj/Main.storyboard
+++ b/SmackApp/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sxJ-am-K8e">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,14 +12,14 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ChatVC" customModule="SmackApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="724"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="SmackApp" id="p2o-JY-F2d">
                         <barButtonItem key="backBarButtonItem" title=" " id="8nr-7P-dxH"/>
-                        <barButtonItem key="leftBarButtonItem" image="smackBurger" id="c6F-lP-Fjt">
+                        <barButtonItem key="rightBarButtonItem" image="smackBurger" id="c6F-lP-Fjt">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="onMenuTapped:" destination="BYZ-38-t0r" id="iZn-bl-zob"/>
@@ -38,17 +38,73 @@
         <scene sceneID="ifj-xV-GtL">
             <objects>
                 <viewController id="oOd-Vy-3TQ" customClass="ChannelVC" customModule="SmackApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="N99-SL-QOj">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                    <view key="view" contentMode="scaleToFill" id="N99-SL-QOj" customClass="GradientView" customModule="SmackApp" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="724"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SmakApp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0pQ-Sy-srN">
+                                <rect key="frame" x="30" y="20" width="102" height="27"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="22"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHANNELS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MdO-sO-m6f">
+                                <rect key="frame" x="30" y="67" width="75" height="17"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ffA-vt-AGQ">
+                                <rect key="frame" x="125" y="636" width="46" height="33"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Osx-Sk-19W">
+                                <rect key="frame" x="30" y="615" width="75" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="Fq3-oO-egp"/>
+                                    <constraint firstAttribute="height" constant="75" id="hYK-M7-Xa2"/>
+                                </constraints>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KDX-3S-Qgp">
+                                <rect key="frame" x="0.0" y="104" width="375" height="491"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ylh-Q4-qY7">
+                                <rect key="frame" x="310" y="65.666666666666657" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="5kO-aq-Stn"/>
+                                    <constraint firstAttribute="height" constant="20" id="i8v-wF-XzS"/>
+                                </constraints>
+                                <state key="normal" image="addChannelButton"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="0pQ-Sy-srN" firstAttribute="leading" secondItem="N99-SL-QOj" secondAttribute="leading" constant="30" id="1M7-8h-M5v"/>
+                            <constraint firstItem="MdO-sO-m6f" firstAttribute="leading" secondItem="0pQ-Sy-srN" secondAttribute="leading" id="7I3-vK-Ufw"/>
+                            <constraint firstItem="0pQ-Sy-srN" firstAttribute="top" secondItem="N99-SL-QOj" secondAttribute="top" constant="20" id="DpG-Ry-ZUl"/>
+                            <constraint firstItem="ffA-vt-AGQ" firstAttribute="centerY" secondItem="Osx-Sk-19W" secondAttribute="centerY" id="U2l-xE-ieu"/>
+                            <constraint firstItem="MdO-sO-m6f" firstAttribute="top" secondItem="0pQ-Sy-srN" secondAttribute="bottom" constant="20" id="YrZ-ET-cG0"/>
+                            <constraint firstItem="Osx-Sk-19W" firstAttribute="leading" secondItem="N99-SL-QOj" secondAttribute="leading" constant="30" id="fbV-hf-dcb"/>
+                            <constraint firstItem="ffA-vt-AGQ" firstAttribute="leading" secondItem="Osx-Sk-19W" secondAttribute="trailing" constant="20" id="fpx-9M-tGp"/>
+                            <constraint firstItem="Fe6-i7-bce" firstAttribute="trailing" secondItem="KDX-3S-Qgp" secondAttribute="trailing" id="gbg-2m-Ipp"/>
+                            <constraint firstItem="Osx-Sk-19W" firstAttribute="bottom" secondItem="Fe6-i7-bce" secondAttribute="bottom" id="itf-wc-pNo"/>
+                            <constraint firstItem="KDX-3S-Qgp" firstAttribute="leading" secondItem="N99-SL-QOj" secondAttribute="leading" id="kGm-0p-cx7"/>
+                            <constraint firstItem="KDX-3S-Qgp" firstAttribute="top" secondItem="MdO-sO-m6f" secondAttribute="bottom" constant="20" id="mPe-Ls-jUf"/>
+                            <constraint firstItem="Osx-Sk-19W" firstAttribute="top" secondItem="KDX-3S-Qgp" secondAttribute="bottom" constant="20" id="oWt-pX-6JU"/>
+                            <constraint firstAttribute="trailing" secondItem="ylh-Q4-qY7" secondAttribute="trailing" constant="45" id="vez-6J-j9d"/>
+                            <constraint firstItem="MdO-sO-m6f" firstAttribute="centerY" secondItem="ylh-Q4-qY7" secondAttribute="centerY" id="y0x-Z2-Plb"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Fe6-i7-bce"/>
                     </view>
                     <navigationItem key="navigationItem" id="735-kt-yN6"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EH2-Nk-tw0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1827" y="104"/>
+            <point key="canvasLocation" x="1826.4000000000001" y="103.44827586206897"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="c6N-SH-hR7">
@@ -56,7 +112,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sxJ-am-K8e" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="yEw-tQ-lWS">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.2901960784" green="0.30196078430000001" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
@@ -75,6 +131,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="addChannelButton" width="22" height="22"/>
+        <image name="menuProfileIcon" width="99" height="99"/>
         <image name="smackBurger" width="28" height="24"/>
     </resources>
 </document>
