--- a/SmackApp/Base.lproj/Main.storyboard
+++ b/SmackApp/Base.lproj/Main.storyboard
@@ -131,7 +131,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="loginBtn" destination="ffA-vt-AGQ" id="sTP-qL-a2H"/>
-                        <segue destination="O3o-YT-Pkl" kind="show" identifier="LoginSegue" id="thP-1Q-i7z"/>
+                        <segue destination="O3o-YT-Pkl" kind="presentation" identifier="LoginSegue" modalPresentationStyle="fullScreen" id="thP-1Q-i7z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EH2-Nk-tw0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -143,11 +143,11 @@
             <objects>
                 <viewController id="O3o-YT-Pkl" customClass="LoginVC" customModule="SmackApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1Ca-4q-Rjc">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="724"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="a2w-y4-eaC">
-                                <rect key="frame" x="100.33333333333333" y="85" width="174.66666666666669" height="40"/>
+                                <rect key="frame" x="100.33333333333333" y="129" width="174.66666666666669" height="40"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="smackLogo" translatesAutoresizingMaskIntoConstraints="NO" id="p30-E7-MAj">
                                         <rect key="frame" x="0.0" y="0.0" width="48" height="40"/>
@@ -165,14 +165,14 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dps-kC-9i8">
-                                <rect key="frame" x="331" y="20" width="28" height="28"/>
+                                <rect key="frame" x="331" y="64" width="28" height="28"/>
                                 <state key="normal" image="closeButton"/>
                                 <connections>
                                     <action selector="onCloseTapped:" destination="O3o-YT-Pkl" eventType="touchUpInside" id="YXQ-sj-OCz"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Jp-AK-5Qh">
-                                <rect key="frame" x="60" y="299" width="255" height="50"/>
+                                <rect key="frame" x="60" y="343" width="255" height="50"/>
                                 <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="bt7-MQ-Obh"/>
@@ -183,7 +183,7 @@
                                 </state>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="EoG-81-VVS">
-                                <rect key="frame" x="60" y="165" width="255" height="84"/>
+                                <rect key="frame" x="60" y="209" width="255" height="84"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ImX-SU-pGP">
                                         <rect key="frame" x="0.0" y="0.0" width="255" height="22"/>
@@ -230,7 +230,7 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VCM-yp-awm">
-                                <rect key="frame" x="60" y="349" width="255" height="26"/>
+                                <rect key="frame" x="60" y="393" width="255" height="26"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                 <state key="normal" title="Don't have an account? Sign up here">
                                     <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
